--- a/views/ooshare_menu_views.xml
+++ b/views/ooshare_menu_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <!-- Fist Level Menu -->
-    <menuitem name="Share" id="menu_ooshare_root" action="action_link" sequence="96"/>
+    <menuitem name="Share" id="menu_ooshare_root" sequence="96"/>
 
     <!-- Second Level Menu -->
     <menuitem id="menu_ooshare_download" name="Download" parent="menu_ooshare_root" sequence="10"/>
